# DNFmasters22-23

./: .gitignore  README.md  abuild.sh  build_debug.sh  clean.sh  colcon_build.sh  frames.gv  gzassassinate.sh  mbuild.sh  mbuild_debug copy.sh  test_path.csv  triangulation test  vis_3d.py
src/audio_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/audio_package/audio_package/: mic_sensor_node.py  pocketsphinx_pubsub.py
src/audio_package/launch/: audio.launch.py
src/audio_package/nodes/: mic_sensor_node.py  pocketsphinx_pubsub.py  publisher_member_function.cpp
src/audio_package/resource/: cmudict-reduced.dict
src/audio_package/src/: mute_alsa.py  vocabulary.py
src/custom_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/msg/: CircleInfo.msg  CircleInfoArr.msg  CircleInfoArrStereo.msg  TriangulatedCircleInfo.msg  TriangulatedCircleInfoArr.msg
src/data_logging/: CMakeLists.txt  package.xml
src/data_logging/datalogs/ik_datalogs/: IK_recording_0001.csv  IK_recording_0002.csv  IK_recording_0005.csv  IK_recording_0007.csv  IK_recording_0009.csv  IK_recording_0010.csv  IK_recording_0011.csv  IK_recording_0012.csv  IK_recording_0013.csv  IK_recording_0014.csv  IK_recording_0015.csv  IK_recording_0016.csv  IK_recording_0017.csv  IK_recording_0018.csv  IK_recording_0021.csv  IK_recording_0022.csv  IK_recording_0023.csv  IK_recording_0025.csv
src/data_logging/datalogs/keyword_datalogs/: keyword_recording_0001.csv  keyword_recording_0005.csv  keyword_recording_0006.csv  keyword_recording_0007.csv  keyword_recording_0008.csv  keyword_recording_0010.csv  keyword_recording_0011.csv
src/data_logging/datalogs/triangulation_datalogs/: triangulation_recording_0000.csv  triangulation_recording_0001.csv  triangulation_recording_0002.csv  triangulation_recording_0003.csv  triangulation_recording_0004.csv  triangulation_recording_0005.csv  triangulation_recording_0006.csv  triangulation_recording_0007.csv  triangulation_recording_0008.csv  triangulation_recording_0009.csv  triangulation_recording_0010.csv  triangulation_recording_0011.csv  triangulation_recording_0032.csv
src/data_logging/launch/: datalogging.launch.py
src/data_logging/nodes/: datalog_IK.py  datalog_keyword.py  datalog_triangulation.py  publisher_member_function.cpp  subscriber_member_function.cpp
src/data_logging/plotting_tools/: control_datalog.csv  control_plot.py  triangulation_datalog-all.csv  triangulation_datalog-noise007.csv  triangulation_datalog.csv  triangulation_datalog_v2.csv  triangulation_plot.py
src/data_logging/src/: datalog_IK.py
src/dnf_package/: CMakeLists.txt  package.xml
src/dnf_package/dnf_logs/: .~lock.keywords_action_dnf_activation_after_learning.csv#  .~lock.keywords_color_dnf_activation_after_learning.csv#  blue_response.csv  color_circles_dnf_input.csv  color_response_KWxC.csv  grasp_response.csv  green_response.csv  keywords_action_dnf_1_epoch.csv  keywords_action_dnf_1_trial.csv  keywords_action_dnf_50_epoch.csv  keywords_action_dnf_activation_after_learning.csv  keywords_color_dnf_1_epoch.csv  keywords_color_dnf_1_trial.csv  keywords_color_dnf_50_epoch.csv  keywords_color_dnf_activation.csv  keywords_color_dnf_activation_after_learning.csv  keywords_dnf_input.csv  move_response.csv  pick_response.csv  red_green_response.csv  red_phrase_response.csv
src/dnf_package/dnf_logs/comparison/: .~lock.comparison_log_Heb.csv#  Eval_Target_v1.csv  Eval_v1.csv  Eval_v2.csv  Eval_v3.csv  comparison_log_Heb.csv  comparison_log_ML.csv
src/dnf_package/dnf_logs/old/: colnorm_post.csv  keywords_action_dnf_activation_after_learning.csv  keywords_color_dnf_activation_after_learning.csv  kw_act_dnf_anticorr.csv  kw_act_dnf_corr.csv  kw_act_dnf_nonrel.csv  kw_col_dnf_anticorr.csv  kw_col_dnf_corr.csv  kw_col_dnf_nonrel.csv  move_release_response.csv  release_response.csv
src/dnf_package/include/: dnf_1d.hpp  dnf_2d.hpp  evaluator.hpp  learning_trial.hpp
src/dnf_package/launch/: dnf_test.launch.py
src/dnf_package/nodes/: dnf_pubsub.py  dnf_pubsub_function.cpp  lava_dnf.py  utils.py
src/dnf_package/src/: actions.cpp  dnf_1d.cpp  dnf_2d.cpp  dnf_lib.cpp  dnf_old.cpp  evaluator.cpp  hsvrgb.cpp  learning_trial.cpp
src/dnf_package/srv/: Decision.srv
src/jetmax_control/: CMakeLists.txt  package.xml
src/jetmax_control/config/: controllers.yaml
src/jetmax_control/env-hooks/: main_package.dsv.in
src/jetmax_control/launch/: alternate_test.launch.py  jetmax_control.launch  jetmax_control.launch.py
src/jetmax_control/launch/inc/: jetmax_control.launch.py  jetmax_spawner.launch.py  jetmax_spawner_old.xml  robot_control.launch.py  robot_spawner.launch.py  robot_spawner.xml  (+1 more)
src/jetmax_control/scripts/: effort_controller_service.py  fk_client.py  fk_service.py  go_home.py  go_home_ik_client.py  gripper_client.py  ik_client.py  ik_client_test.py  ik_service.py  jetmax_fk.py  jetmax_ik.py  jetmax_kinematics.py  moving.py
src/jetmax_control/srv/: FKRequest.srv
src/jetmax_description/: CMakeLists.txt  package.xml
src/jetmax_description/launch/: jetmax_description.xml  robot_spawner.launch.py  robot_spawner.xml
src/jetmax_description/urdf/: jetmax.gazebo  jetmax.sdf  jetmax.urdf  jetmax.xacro  jetmax_joints copy.xml  jetmax_joints.xml  jetmax_trans.xml
src/jetmax_package/: CMakeLists.txt  package.xml
src/jetmax_package/launch/: jetmax.launch.py
src/main_package/: CMakeLists.txt  package.xml
src/main_package/config/: gazebo_params.yaml
src/main_package/launch/: command.launch.py  main.launch.py
src/main_package/main_package/: actions.py  movement.py
src/main_package/nodes/: camera_pubsub_function.cpp  circle_subscriber_function.cpp  movement_command_center.py  subscriber_member_function.cpp  transform_pubsub.py  triangulation_pubsub.py
src/main_package/rviz/: myrviz.rviz
src/main_package/src/: movement.py  test_path.csv  vision.cpp
src/main_package/worlds/: camera_world.world  dolly_empty.world  environment1.world  environment2.world  environment3 copy.world  environment3.world  environment_board.world  jetmax_empty.world  table_3balls_camera_dynamic
(+62 files in other folders)
