<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>audio_package</name>
  <version>0.0.0</version>
  <description>Handles Keyword Spotting and other audio related features of the project.</description>
  <maintainer email="jajep18@student.sdu.dk">jacob</maintainer>
  <license>License declaration - This project is for a masters thesis by Jajep18 and Ercos18. </license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <!-- Dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>custom_msgs</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
