<?xml version="1.0" encoding="UTF-8"?>
<package format="3">
  <name>jetmax_control</name>
  <version>1.0.0</version>
  <description>The jetmax_control package</description>
  <author>Lucas Lu (ROS1), Ercos18 and Jajep18 (ROS2)</author>
  <maintainer email="lyplucas@foxmail.com">exx0</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <!-- Blob example -->
  <depend>urdf</depend>
  <depend>angles</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>gazebo_ros_pkgs</depend>
  <depend>ros2launch</depend>
  <exec_depend>joint_state_broadcaster</exec_depend>

  <!-- ROS2 Service specific includes -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
